--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,9 @@ man_MANS = libao.conf.5
 EXTRA_DIST = README AUTHORS CHANGES COPYING libao.spec ao.m4 acinclude.m4 ao.pc.in $(man_MANS)
 
 debug:
+	$(MAKE) clean
 	$(MAKE) all CFLAGS="@DEBUG@"
 
 profile:
+	$(MAKE) clean
 	$(MAKE) all CFLAGS="@PROFILE@"
