--- a/configure.ac
+++ b/configure.ac
@@ -194,8 +194,7 @@ AC_ARG_ENABLE([wmm],
 AC_ARG_ENABLE([wmm_debug],
     [AS_HELP_STRING(
 	[--enable-wmm-debug],
-	[enable WMM debugging output @<:@default=no@:>@])],
-	[enable_wmm_debug="yes"]
+	[enable WMM debugging output @<:@default=no@:>@])]
 )
 AS_IF([test "x$enable_wmm" != "xno"],
 [AC_CHECK_HEADERS([mmsystem.h],
@@ -220,7 +219,7 @@ LIBS="$waveout_old_LIBS"
 ],[],[#include <windows.h>])])
 AM_CONDITIONAL([HAVE_WMM],[test "x$has_wmm" = "xyes"])
 AS_IF([test "x${has_wmm}" = "xyes"],[WMM_LIBS="-lwinmm"],[WMM_LIBS=""])
-AS_IF([test "x${has_wmm}" = "xyes" && test "x$enable_wmm_debug"],[CFLAGS="$CFLAGS -DAO_WMM_DEBUG=1"],[])
+AS_IF([test "x${has_wmm}" = "xyes" && test "x$enable_wmm_debug" = "xyes"],[CFLAGS="$CFLAGS -DAO_WMM_DEBUG=1"],[])
 AC_SUBST([WMM_LIBS])
 
 dnl Check for ESD
