--- a/ao.pc.in
+++ b/ao.pc.in
@@ -10,6 +10,7 @@ Description: ao is a cross-platform audio output library
 Version: @VERSION@
 Requires:
 Conflicts:
-Libs: -L${libdir} -lao @LIBS@
+Libs: -L${libdir} -lao
+Libs.private: @LIBS@
 Cflags: -I${includedir}
 
