More of the endless hacking to make aRts support more reliable than aRts itself.  I think at this point we're guarding against anything that can go wrong.
Multi-stream playback support is also implemented but disabled; although 
it works, it will randomly trigger segfaults in the remote aRts server.



git-svn-id: http://svn.xiph.org/trunk/ao@16855 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/configure.ac
+++ b/configure.ac
@@ -310,8 +310,9 @@ if test "$BUILD_ARTS" = "yes"; then
 
   if test "x$ac_cv_path_ARTSC_CONFIG" != x
   then
-	ARTS_CFLAGS=`$ac_cv_path_ARTSC_CONFIG --cflags`
-	ARTS_LIBS=`$ac_cv_path_ARTSC_CONFIG --libs`
+	PKG_CHECK_MODULES(ARTSGLIB, glib-2.0 gthread-2.0)
+	ARTS_CFLAGS="`$ac_cv_path_ARTSC_CONFIG --cflags` $ARTSGLIB_CFLAGS"
+	ARTS_LIBS="`$ac_cv_path_ARTSC_CONFIG --libs` $ARTSGLIB_LIBS"
 	SAVELIBS=$LIBS
 	LIBS="$LIBS $ARTS_LIBS"
 	AC_CHECK_FUNCS(arts_suspended)
