--- a/src/plugins/macosx/Makefile.am
+++ b/src/plugins/macosx/Makefile.am
@@ -19,7 +19,7 @@ INCLUDES = -I$(top_builddir)/include/ao -I$(top_srcdir)/include
 libdir = $(plugindir)
 lib_LTLIBRARIES = $(macosxltlibs)
 
-libmacosx_la_LDFLAGS = @PLUGIN_LDFLAGS@ -framework CoreAudio
+libmacosx_la_LDFLAGS = @PLUGIN_LDFLAGS@ -framework AudioUnit
 libmacosx_la_SOURCES = $(macosxsources)
 
 EXTRA_DIST = ao_macosx.c
