One automake fix, alter configure version for release
git-svn-id: http://svn.xiph.org/trunk/ao@17043 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/include/ao/Makefile.am
+++ b/include/ao/Makefile.am
@@ -5,4 +5,4 @@ AUTOMAKE_OPTIONS = foreign 1.6
 includedir = $(prefix)/include/ao
 
 include_HEADERS = ao.h plugin.h
-nodist_include_HEADERS = os_types.h ao_private.h
+noinst_HEADERS = os_types.h ao_private.h
