os_types.h was not a private header as assumes; expose and install
git-svn-id: http://svn.xiph.org/trunk/ao@17054 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/include/ao/Makefile.am
+++ b/include/ao/Makefile.am
@@ -4,5 +4,5 @@ AUTOMAKE_OPTIONS = foreign 1.6
 
 includedir = $(prefix)/include/ao
 
-include_HEADERS = ao.h plugin.h
-noinst_HEADERS = os_types.h ao_private.h
+include_HEADERS = ao.h plugin.h os_types.h
+noinst_HEADERS = ao_private.h
