gmaxwell noticed that the configure script still reported 'installation path of lib*theora*'
git-svn-id: http://svn.xiph.org/trunk/ao@17725 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/configure.ac
+++ b/configure.ac
@@ -448,7 +448,7 @@ AC_MSG_RESULT([
 
   Installation paths:
 
-    libtheora: ................... ${LIBDIR}
+    libao: ....................... ${LIBDIR}
     C header files: .............. ${INCLUDEDIR}/ao
     Documentation: ............... ${DOCDIR}
 
