Add SLP disable workaround to ao_roar, add necessary hooks to configure
git-svn-id: http://svn.xiph.org/trunk/ao@17765 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/src/plugins/roar/Makefile.am
+++ b/src/plugins/roar/Makefile.am
@@ -19,6 +19,7 @@ INCLUDES = -I$(top_builddir)/include/ao -I$(top_srcdir)/include
 libdir = $(plugindir)
 lib_LTLIBRARIES = $(roarltlibs)
 
+libroar_la_CFLAGS = $(CFLAGS) @SLP_DEF@
 libroar_la_LDFLAGS = @PLUGIN_LDFLAGS@
 libroar_la_LIBADD = -lroar
 libroar_la_SOURCES = $(roarsources)
