Commit ld versioning patch submitted in Trac #1764
git-svn-id: http://svn.xiph.org/trunk/ao@17859 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/configure.ac
+++ b/configure.ac
@@ -117,6 +117,21 @@ case $host in
 esac
 AC_SUBST(LIBAO_LA_LDFLAGS)
 
+dnl ===================================
+dnl Check for symbol versioning support
+dnl ===================================
+
+AC_MSG_CHECKING([if libraries can be versioned])
+GLD=`$LD --help < /dev/null 2>/dev/null | grep version-script`
+if test "$GLD"; then
+    have_ld_version_script=yes
+    AC_MSG_RESULT(yes)
+else
+    have_ld_version_script=no
+    AC_MSG_RESULT(no)
+fi
+AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$have_ld_version_script" = "yes")
+
 dnl ==============================
 dnl Check for libraries
 dnl ==============================
