--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,9 @@ endif
 
 libao_la_SOURCES = audio_out.c config.c ao_null.c ao_wav.c ao_au.c ao_raw.c ao_aixs.c $(wmm)
 libao_la_LDFLAGS = @LIBAO_LA_LDFLAGS@ -version-info @LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@
+if HAVE_LD_VERSION_SCRIPT
+  libao_la_LDFLAGS += -Wl,--version-script=ao.vers
+endif
 
 
 debug:
