--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,9 @@ m4data_DATA = ao.m4
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = ao.pc
 
+ckportdir = $(libdir)/ckport/db
+ckport_DATA = libao.ckport
+
 man_MANS = libao.conf.5
 
 EXTRA_DIST = README AUTHORS CHANGES COPYING libao.spec ao.m4 acinclude.m4 as-ac-expand.m4 ao.pc.in $(man_MANS)
